[package]
name = "vectorscope"
version = "0.1.0"
authors = ["lqdev <liquidekgaming@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
cpal = { version = "0.13.3", features = ["jack"] }
pixels = "0.2.0"
winit = "0.24.0"
anyhow = "1.0.40"
